# DesktopFriends

./: .gitignore  README.md  README_zh.md  package.json  pnpm-lock.yaml
.github/workflows/: docs.yml  release.yml
apps/desktop/: Plugin Development.md  index.html  package.json  vite.config.js  vite.config.ts
apps/desktop/scripts/create-new-plugin/: index.mjs
apps/desktop/src/: App.vue  main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/plugins/command-bridge/: Cargo.toml  README.md  build.sh  manifest.json
apps/desktop/src-tauri/plugins/command-bridge/src/: command.rs  config.rs  history.rs  lib.rs  requests.rs
apps/desktop/src-tauri/plugins/command-bridge/src/commands/: base.rs  ls.rs  mod.rs
apps/desktop/src-tauri/plugins/command-bridge/src/utils/: path_utils.rs
apps/desktop/src-tauri/plugins/command-bridge/ui/: Panel.vue  console.html
apps/desktop/src-tauri/plugins/common/: Cargo.toml
apps/desktop/src-tauri/plugins/common/src/: lib.rs
apps/desktop/src-tauri/plugins/examples/pdf-reader/: Cargo.toml  README.md  build.sh  build.sh.bak  manifest.json
apps/desktop/src-tauri/plugins/examples/pdf-reader/src/: lib.rs
apps/desktop/src-tauri/plugins/examples/pdf-reader/ui/: PdfPanel.vue  viewer.html
apps/desktop/src-tauri/plugins/macos-agent-plugin/: Cargo.toml  README.md  build.sh  manifest.json
apps/desktop/src-tauri/plugins/macos-agent-plugin/src/: applescript.rs  config.rs  lib.rs  notes.rs
apps/desktop/src-tauri/plugins/macos-agent-plugin/ui/: Panel.vue
apps/desktop/src-tauri/plugins/shell-commander/: Cargo.toml  README.md  build.sh  manifest.json
apps/desktop/src-tauri/plugins/shell-commander/src/: lib.rs
apps/desktop/src-tauri/plugins/shell-commander/ui/: Panel.vue
apps/desktop/src-tauri/plugins/tablefri-plugin-api/: Cargo.toml
apps/desktop/src-tauri/plugins/test-a/: Cargo.toml  README.md  build.sh  manifest.json
apps/desktop/src-tauri/plugins/test-a/src/: lib.rs
apps/desktop/src-tauri/plugins/test-a/ui/: Panel.vue
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/plugins/: api.rs  commands.rs  hooks.rs  loader.rs  manager.rs  mod.rs  registry.rs  window.rs
apps/desktop/src/components/: WindowControls.vue
apps/desktop/src/composables/: useModelUpload.ts  usePluginTools.ts  useSystemEvents.ts
apps/desktop/src/plugins/: PluginManager.vue  index.ts  types.ts  usePluginSystem.ts
apps/desktop/src/views/: SettingsView.vue
apps/mobile/: WEATHER_API_INTEGRATION.md  capacitor.config.ts  package.json
apps/mobile/android/: capacitor.settings.gradle
apps/mobile/android/app/: build.gradle  capacitor.build.gradle
apps/mobile/android/app/src/main/: AndroidManifest.xml
apps/mobile/android/app/src/main/java/com/desktopfriends/app/: LocalServerPlugin.java  MainActivity.java
apps/mobile/android/app/src/main/java/com/tablefri/app/: LocalServerPlugin.java  MainActivity.java
apps/mobile/android/app/src/main/res/values/: strings.xml  styles.xml
apps/mobile/android/app/src/main/res/xml/: network_security_config.xml
apps/mobile/src/: App.vue  main.ts
apps/mobile/src/components/: Live2DCanvas.vue
apps/mobile/src/components/widgets/: ClockWidget.vue  PhotoWidget.vue  TodoWidget.vue  WeatherSettingsDialog.vue  WeatherWidget.vue  WidgetContainer.vue  WidgetWrapper.vue
apps/mobile/src/composables/: useKeyboard.ts  useModelUpload.ts
apps/mobile/src/views/: HomeView.vue  SettingsView.vue
apps/server/: package.json  sister_listener.mjs  sister_listener_simple.mjs  tsconfig.json
apps/server/src/: app.ts  auth.test.ts.bak  auth.ts  database.ts  index.ts  mdns.ts  socket.test.ts  socket.ts
apps/server/tests/integration/: lan-bridge.test.ts  stress.test.ts
docs/: DEPLOYMENT.md  download.md  index.md
docs/.vitepress/: config.ts
docs/guide/: ai-chat.md  custom-model.md  getting-started.md  index.md  multiplayer.md  openclaw-bridge.md
skills/cross-device-chat/: README.md  listener.mjs  package.json  send.mjs
