[workspace]
members = [
    ".",
    "plugins/tablefri-plugin-api",
    "plugins/examples/pdf-reader",
    "plugins/command-bridge",
    "plugins/shell-commander",
]
resolver = "2"

[package]
name = "tablefri"
version = "0.1.0"
description = "AI Live2D Desktop Pet"
authors = ["TableFri Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
    "global-shortcut-all",
    "clipboard-all",
    "macos-private-api",
    "window-all",
    "shell-open",
    "dialog-all",
    "path-all",
    "fs-all",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libloading = "0.8"
tokio = { version = "1", features = ["sync", "fs", "time"] }
zip = "0.6"
thiserror = "1.0"
async-trait = "0.1"
arboard = "3.2"
urlencoding = "2.1"
base64 = "0.21"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
