[package]
name = "command_bridge_plugin"
version = "0.1.0"
edition = "2021"
description = "Controlled shell command runner - Execute system commands with user approval"
authors = ["TableFri"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
tablefri-plugin-api = { path = "../tablefri-plugin-api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
