[package]
name = "macos-agent-plugin"
version = "1.0.0"
edition = "2021"
description = "TableFri macOS 应用代理插件 - 访问和控制 macOS 内置应用"
authors = ["TableFri"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
tablefri-plugin-api = { path = "../tablefri-plugin-api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
