[package]
name = "shell-commander-plugin"
version = "0.1.0"
edition = "2021"
description = "A TableFri plugin"
authors = ["Your Name"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
